<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/kurs"
            android:icon="@mipmap/ballerina"
            android:title="@string/alle_kurs_p_sbds" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/ic_face_black_24dp"
            android:title="Manage kurs"
           />


    </group>

    <item android:title="@string/min_profilTitle">
        <menu>

            <item
                android:id="@+id/profil"
                android:icon="@mipmap/ic_face_black_24dp"
                android:title="@string/min_profilDrawer" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/mine_kurs" />
            <item
                android:title="@string/oppdater"
                android:icon="@mipmap/ic_face_black_24dp"
                android:id="@+id/update_user"/>
        </menu>
    </item>

</menu>
